Release 24w39a (snapshot)