@@ -1,271 +1,48 @@
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
+import java.util.List;
+import java.util.Optional;
 
-public class rk {
-   public static final alk<enl> a = ri.a("village/savanna/town_centers");
-   private static final alk<enl> b = ri.a("village/savanna/terminators");
-   private static final alk<enl> c = ri.a("village/savanna/zombie/terminators");
-
-   public static void a(rb<enl> $$0) {
-      jr<elf> $$1 = $$0.a(ma.aR);
-      jq<elf> $$2 = $$1.b(su.g);
-      jq<elf> $$3 = $$1.b(su.a);
-      jq<elf> $$4 = $$1.b(su.b);
-      jr<eqb> $$5 = $$0.a(ma.aT);
-      jq<eqb> $$6 = $$5.b(rj.b);
-      jq<eqb> $$7 = $$5.b(rj.j);
-      jq<eqb> $$8 = $$5.b(rj.m);
-      jr<enl> $$9 = $$0.a(ma.aV);
-      jq<enl> $$10 = $$9.b(ri.a);
-      jq<enl> $$11 = $$9.b(b);
-      jq<enl> $$12 = $$9.b(c);
+public interface rk {
+   static void a(qz<emo> $$0) {
+      jr<emi> $$1 = $$0.a(ma.aS);
+      jr<dgo> $$2 = $$0.a(ma.aG);
+      jq.c<emo> $$3 = $$0.a(
+         emb.a,
+         new emo(
+            List.of(emo.a($$1.b(emc.t)), emo.a($$1.b(emc.u)), emo.a($$1.b(emc.v)), emo.a($$1.b(emc.w)), emo.a($$1.b(emc.x))), new end(34, 8, ene.a, 10387312)
+         )
+      );
+      $$0.a(emb.b, new emo($$1.b(emc.f), new end(32, 8, ene.a, 14357617)));
+      $$0.a(emb.c, new emo($$1.b(emc.g), new end(32, 8, ene.a, 14357618)));
+      $$0.a(emb.d, new emo($$1.b(emc.e), new end(32, 8, ene.a, 14357619)));
+      $$0.a(emb.e, new emo($$1.b(emc.j), new end(32, 8, ene.a, 14357620)));
+      $$0.a(emb.f, new emo($$1.b(emc.a), new end(kl.g, enf.c.b, 0.2F, 165745296, Optional.of(new enf.a($$3, 10)), 32, 8, ene.a)));
+      $$0.a(emb.q, new emo($$1.b(emc.F), new end(24, 8, ene.a, 20083232)));
+      $$0.a(emb.g, new emo($$1.b(emc.l), new end(32, 5, ene.b, 10387313)));
+      $$0.a(emb.h, new emo($$1.b(emc.d), new end(80, 20, ene.b, 10387319)));
+      $$0.a(emb.i, new emo($$1.b(emc.r), new end(new kl(9, 0, 9), enf.c.c, 0.01F, 0, Optional.empty(), 1, 0, ene.a)));
+      $$0.a(emb.j, new emo(List.of(emo.a($$1.b(emc.b)), emo.a($$1.b(emc.c))), new end(kl.g, enf.c.d, 0.004F, 0, Optional.empty(), 1, 0, ene.a)));
       $$0.a(
-         a,
-         new enl(
-            $$10,
-            ImmutableList.of(
-               Pair.of(enj.a("village/savanna/town_centers/savanna_meeting_point_1"), 100),
-               Pair.of(enj.a("village/savanna/town_centers/savanna_meeting_point_2"), 50),
-               Pair.of(enj.a("village/savanna/town_centers/savanna_meeting_point_3"), 150),
-               Pair.of(enj.a("village/savanna/town_centers/savanna_meeting_point_4"), 150),
-               Pair.of(enj.a("village/savanna/zombie/town_centers/savanna_meeting_point_1", $$6), 2),
-               Pair.of(enj.a("village/savanna/zombie/town_centers/savanna_meeting_point_2", $$6), 1),
-               Pair.of(enj.a("village/savanna/zombie/town_centers/savanna_meeting_point_3", $$6), 3),
-               Pair.of(enj.a("village/savanna/zombie/town_centers/savanna_meeting_point_4", $$6), 3)
+         emb.k,
+         new emo(
+            List.of(
+               emo.a($$1.b(emc.y)),
+               emo.a($$1.b(emc.z)),
+               emo.a($$1.b(emc.A)),
+               emo.a($$1.b(emc.B)),
+               emo.a($$1.b(emc.C)),
+               emo.a($$1.b(emc.D)),
+               emo.a($$1.b(emc.E))
             ),
-            enl.a.b
+            new end(40, 15, ene.a, 34222645)
          )
       );
-      ri.a(
-         $$0,
-         "village/savanna/streets",
-         new enl(
-            $$11,
-            ImmutableList.of(
-               Pair.of(enj.a("village/savanna/streets/corner_01", $$7), 2),
-               Pair.of(enj.a("village/savanna/streets/corner_03", $$7), 2),
-               Pair.of(enj.a("village/savanna/streets/straight_02", $$7), 4),
-               Pair.of(enj.a("village/savanna/streets/straight_04", $$7), 7),
-               Pair.of(enj.a("village/savanna/streets/straight_05", $$7), 3),
-               Pair.of(enj.a("village/savanna/streets/straight_06", $$7), 4),
-               Pair.of(enj.a("village/savanna/streets/straight_08", $$7), 4),
-               Pair.of(enj.a("village/savanna/streets/straight_09", $$7), 4),
-               Pair.of(enj.a("village/savanna/streets/straight_10", $$7), 4),
-               Pair.of(enj.a("village/savanna/streets/straight_11", $$7), 4),
-               Pair.of(enj.a("village/savanna/streets/crossroad_02", $$7), 1),
-               Pair.of(enj.a("village/savanna/streets/crossroad_03", $$7), 2),
-               new Pair[]{
-                  Pair.of(enj.a("village/savanna/streets/crossroad_04", $$7), 2),
-                  Pair.of(enj.a("village/savanna/streets/crossroad_05", $$7), 2),
-                  Pair.of(enj.a("village/savanna/streets/crossroad_06", $$7), 2),
-                  Pair.of(enj.a("village/savanna/streets/crossroad_07", $$7), 2),
-                  Pair.of(enj.a("village/savanna/streets/split_01", $$7), 2),
-                  Pair.of(enj.a("village/savanna/streets/split_02", $$7), 2),
-                  Pair.of(enj.a("village/savanna/streets/turn_01", $$7), 3)
-               }
-            ),
-            enl.a.a
-         )
-      );
-      ri.a(
-         $$0,
-         "village/savanna/zombie/streets",
-         new enl(
-            $$12,
-            ImmutableList.of(
-               Pair.of(enj.a("village/savanna/zombie/streets/corner_01", $$7), 2),
-               Pair.of(enj.a("village/savanna/zombie/streets/corner_03", $$7), 2),
-               Pair.of(enj.a("village/savanna/zombie/streets/straight_02", $$7), 4),
-               Pair.of(enj.a("village/savanna/zombie/streets/straight_04", $$7), 7),
-               Pair.of(enj.a("village/savanna/zombie/streets/straight_05", $$7), 3),
-               Pair.of(enj.a("village/savanna/zombie/streets/straight_06", $$7), 4),
-               Pair.of(enj.a("village/savanna/zombie/streets/straight_08", $$7), 4),
-               Pair.of(enj.a("village/savanna/zombie/streets/straight_09", $$7), 4),
-               Pair.of(enj.a("village/savanna/zombie/streets/straight_10", $$7), 4),
-               Pair.of(enj.a("village/savanna/zombie/streets/straight_11", $$7), 4),
-               Pair.of(enj.a("village/savanna/zombie/streets/crossroad_02", $$7), 1),
-               Pair.of(enj.a("village/savanna/zombie/streets/crossroad_03", $$7), 2),
-               new Pair[]{
-                  Pair.of(enj.a("village/savanna/zombie/streets/crossroad_04", $$7), 2),
-                  Pair.of(enj.a("village/savanna/zombie/streets/crossroad_05", $$7), 2),
-                  Pair.of(enj.a("village/savanna/zombie/streets/crossroad_06", $$7), 2),
-                  Pair.of(enj.a("village/savanna/zombie/streets/crossroad_07", $$7), 2),
-                  Pair.of(enj.a("village/savanna/zombie/streets/split_01", $$7), 2),
-                  Pair.of(enj.a("village/savanna/zombie/streets/split_02", $$7), 2),
-                  Pair.of(enj.a("village/savanna/zombie/streets/turn_01", $$7), 3)
-               }
-            ),
-            enl.a.a
-         )
-      );
-      ri.a(
-         $$0,
-         "village/savanna/houses",
-         new enl(
-            $$11,
-            ImmutableList.of(
-               Pair.of(enj.a("village/savanna/houses/savanna_small_house_1"), 2),
-               Pair.of(enj.a("village/savanna/houses/savanna_small_house_2"), 2),
-               Pair.of(enj.a("village/savanna/houses/savanna_small_house_3"), 2),
-               Pair.of(enj.a("village/savanna/houses/savanna_small_house_4"), 2),
-               Pair.of(enj.a("village/savanna/houses/savanna_small_house_5"), 2),
-               Pair.of(enj.a("village/savanna/houses/savanna_small_house_6"), 2),
-               Pair.of(enj.a("village/savanna/houses/savanna_small_house_7"), 2),
-               Pair.of(enj.a("village/savanna/houses/savanna_small_house_8"), 2),
-               Pair.of(enj.a("village/savanna/houses/savanna_medium_house_1"), 2),
-               Pair.of(enj.a("village/savanna/houses/savanna_medium_house_2"), 2),
-               Pair.of(enj.a("village/savanna/houses/savanna_butchers_shop_1"), 2),
-               Pair.of(enj.a("village/savanna/houses/savanna_butchers_shop_2"), 2),
-               new Pair[]{
-                  Pair.of(enj.a("village/savanna/houses/savanna_tool_smith_1"), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_fletcher_house_1"), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_shepherd_1"), 7),
-                  Pair.of(enj.a("village/savanna/houses/savanna_armorer_1"), 1),
-                  Pair.of(enj.a("village/savanna/houses/savanna_fisher_cottage_1"), 3),
-                  Pair.of(enj.a("village/savanna/houses/savanna_tannery_1"), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_cartographer_1"), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_library_1"), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_mason_1"), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_weaponsmith_1"), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_weaponsmith_2"), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_temple_1"), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_temple_2"), 3),
-                  Pair.of(enj.a("village/savanna/houses/savanna_large_farm_1", $$8), 4),
-                  Pair.of(enj.a("village/savanna/houses/savanna_large_farm_2", $$8), 6),
-                  Pair.of(enj.a("village/savanna/houses/savanna_small_farm", $$8), 4),
-                  Pair.of(enj.a("village/savanna/houses/savanna_animal_pen_1"), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_animal_pen_2"), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_animal_pen_3"), 2),
-                  Pair.of(enj.h(), 5)
-               }
-            ),
-            enl.a.b
-         )
-      );
-      ri.a(
-         $$0,
-         "village/savanna/zombie/houses",
-         new enl(
-            $$12,
-            ImmutableList.of(
-               Pair.of(enj.a("village/savanna/zombie/houses/savanna_small_house_1", $$6), 2),
-               Pair.of(enj.a("village/savanna/zombie/houses/savanna_small_house_2", $$6), 2),
-               Pair.of(enj.a("village/savanna/zombie/houses/savanna_small_house_3", $$6), 2),
-               Pair.of(enj.a("village/savanna/zombie/houses/savanna_small_house_4", $$6), 2),
-               Pair.of(enj.a("village/savanna/zombie/houses/savanna_small_house_5", $$6), 2),
-               Pair.of(enj.a("village/savanna/zombie/houses/savanna_small_house_6", $$6), 2),
-               Pair.of(enj.a("village/savanna/zombie/houses/savanna_small_house_7", $$6), 2),
-               Pair.of(enj.a("village/savanna/zombie/houses/savanna_small_house_8", $$6), 2),
-               Pair.of(enj.a("village/savanna/zombie/houses/savanna_medium_house_1", $$6), 2),
-               Pair.of(enj.a("village/savanna/zombie/houses/savanna_medium_house_2", $$6), 2),
-               Pair.of(enj.a("village/savanna/houses/savanna_butchers_shop_1", $$6), 2),
-               Pair.of(enj.a("village/savanna/houses/savanna_butchers_shop_2", $$6), 2),
-               new Pair[]{
-                  Pair.of(enj.a("village/savanna/houses/savanna_tool_smith_1", $$6), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_fletcher_house_1", $$6), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_shepherd_1", $$6), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_armorer_1", $$6), 1),
-                  Pair.of(enj.a("village/savanna/houses/savanna_fisher_cottage_1", $$6), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_tannery_1", $$6), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_cartographer_1", $$6), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_library_1", $$6), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_mason_1", $$6), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_weaponsmith_1", $$6), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_weaponsmith_2", $$6), 2),
-                  Pair.of(enj.a("village/savanna/houses/savanna_temple_1", $$6), 1),
-                  Pair.of(enj.a("village/savanna/houses/savanna_temple_2", $$6), 3),
-                  Pair.of(enj.a("village/savanna/houses/savanna_large_farm_1", $$6), 4),
-                  Pair.of(enj.a("village/savanna/zombie/houses/savanna_large_farm_2", $$6), 4),
-                  Pair.of(enj.a("village/savanna/houses/savanna_small_farm", $$6), 4),
-                  Pair.of(enj.a("village/savanna/houses/savanna_animal_pen_1", $$6), 2),
-                  Pair.of(enj.a("village/savanna/zombie/houses/savanna_animal_pen_2", $$6), 2),
-                  Pair.of(enj.a("village/savanna/zombie/houses/savanna_animal_pen_3", $$6), 2),
-                  Pair.of(enj.h(), 5)
-               }
-            ),
-            enl.a.b
-         )
-      );
-      $$0.a(
-         b,
-         new enl(
-            $$10,
-            ImmutableList.of(
-               Pair.of(enj.a("village/plains/terminators/terminator_01", $$7), 1),
-               Pair.of(enj.a("village/plains/terminators/terminator_02", $$7), 1),
-               Pair.of(enj.a("village/plains/terminators/terminator_03", $$7), 1),
-               Pair.of(enj.a("village/plains/terminators/terminator_04", $$7), 1),
-               Pair.of(enj.a("village/savanna/terminators/terminator_05", $$7), 1)
-            ),
-            enl.a.a
-         )
-      );
-      $$0.a(
-         c,
-         new enl(
-            $$10,
-            ImmutableList.of(
-               Pair.of(enj.a("village/plains/terminators/terminator_01", $$7), 1),
-               Pair.of(enj.a("village/plains/terminators/terminator_02", $$7), 1),
-               Pair.of(enj.a("village/plains/terminators/terminator_03", $$7), 1),
-               Pair.of(enj.a("village/plains/terminators/terminator_04", $$7), 1),
-               Pair.of(enj.a("village/savanna/zombie/terminators/terminator_05", $$7), 1)
-            ),
-            enl.a.a
-         )
-      );
-      ri.a($$0, "village/savanna/trees", new enl($$10, ImmutableList.of(Pair.of(enj.a($$2), 1)), enl.a.b));
-      ri.a(
-         $$0,
-         "village/savanna/decor",
-         new enl(
-            $$10,
-            ImmutableList.of(
-               Pair.of(enj.a("village/savanna/savanna_lamp_post_01"), 4),
-               Pair.of(enj.a($$2), 4),
-               Pair.of(enj.a($$3), 4),
-               Pair.of(enj.a($$4), 1),
-               Pair.of(enj.h(), 4)
-            ),
-            enl.a.b
-         )
-      );
-      ri.a(
-         $$0,
-         "village/savanna/zombie/decor",
-         new enl(
-            $$10,
-            ImmutableList.of(
-               Pair.of(enj.a("village/savanna/savanna_lamp_post_01", $$6), 4),
-               Pair.of(enj.a($$2), 4),
-               Pair.of(enj.a($$3), 4),
-               Pair.of(enj.a($$4), 1),
-               Pair.of(enj.h(), 4)
-            ),
-            enl.a.b
-         )
-      );
-      ri.a(
-         $$0,
-         "village/savanna/villagers",
-         new enl(
-            $$10,
-            ImmutableList.of(
-               Pair.of(enj.a("village/savanna/villagers/nitwit"), 1),
-               Pair.of(enj.a("village/savanna/villagers/baby"), 1),
-               Pair.of(enj.a("village/savanna/villagers/unemployed"), 10)
-            ),
-            enl.a.b
-         )
-      );
-      ri.a(
-         $$0,
-         "village/savanna/zombie/villagers",
-         new enl(
-            $$10,
-            ImmutableList.of(Pair.of(enj.a("village/savanna/zombie/villagers/nitwit"), 1), Pair.of(enj.a("village/savanna/zombie/villagers/unemployed"), 10)),
-            enl.a.b
-         )
-      );
+      $$0.a(emb.l, new emo(List.of(emo.a($$1.b(emc.h)), emo.a($$1.b(emc.i))), new end(24, 4, ene.a, 165745295)));
+      $$0.a(emb.m, new emo(List.of(emo.a($$1.b(emc.m)), emo.a($$1.b(emc.n))), new end(20, 8, ene.a, 14357621)));
+      $$0.a(emb.n, new emo(List.of(emo.a($$1.b(emc.o), 2), emo.a($$1.b(emc.s), 3)), new end(27, 4, ene.a, 30084232)));
+      $$0.a(emb.o, new emo($$1.b(emc.p), new end(2, 1, ene.a, 14357921)));
+      $$0.a(emb.p, new emo($$1.b(emc.q), new end(20, 11, ene.b, 10387313)));
+      $$0.a(emb.r, new emo($$1.b(emc.k), new enc(32, 3, 128, $$2.b(axb.o))));
+      $$0.a(emb.s, new emo($$1.b(emc.G), new end(34, 8, ene.a, 83469867)));
+      $$0.a(emb.t, new emo($$1.b(emc.H), new end(34, 12, ene.a, 94251327)));
    }
 }
