@@ -1,19 +1,55 @@
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 
 public class sb {
-   public static final alk<eeb<?, ?>> a = sc.a("end_platform");
-   public static final alk<eeb<?, ?>> b = sc.a("end_spike");
-   public static final alk<eeb<?, ?>> c = sc.a("end_gateway_return");
-   public static final alk<eeb<?, ?>> d = sc.a("end_gateway_delayed");
-   public static final alk<eeb<?, ?>> e = sc.a("chorus_plant");
-   public static final alk<eeb<?, ?>> f = sc.a("end_island");
+   public static final ali<eei<?, ?>> a = sa.a("ice_spike");
+   public static final ali<eei<?, ?>> b = sa.a("ice_patch");
+   public static final ali<eei<?, ?>> c = sa.a("forest_rock");
+   public static final ali<eei<?, ?>> d = sa.a("iceberg_packed");
+   public static final ali<eei<?, ?>> e = sa.a("iceberg_blue");
+   public static final ali<eei<?, ?>> f = sa.a("blue_ice");
+   public static final ali<eei<?, ?>> g = sa.a("lake_lava");
+   public static final ali<eei<?, ?>> h = sa.a("disk_clay");
+   public static final ali<eei<?, ?>> i = sa.a("disk_gravel");
+   public static final ali<eei<?, ?>> j = sa.a("disk_sand");
+   public static final ali<eei<?, ?>> k = sa.a("freeze_top_layer");
+   public static final ali<eei<?, ?>> l = sa.a("disk_grass");
+   public static final ali<eei<?, ?>> m = sa.a("bonus_chest");
+   public static final ali<eei<?, ?>> n = sa.a("void_start_platform");
+   public static final ali<eei<?, ?>> o = sa.a("desert_well");
+   public static final ali<eei<?, ?>> p = sa.a("spring_lava_overworld");
+   public static final ali<eei<?, ?>> q = sa.a("spring_lava_frozen");
+   public static final ali<eei<?, ?>> r = sa.a("spring_water");
 
-   public static void a(rb<eeb<?, ?>> $$0) {
-      sc.a($$0, a, eep.J);
-      sc.a($$0, b, eep.K, new ehn(false, ImmutableList.of(), null));
-      sc.a($$0, c, eep.M, egs.a(arq.a, true));
-      sc.a($$0, d, eep.M, egs.a());
-      sc.a($$0, e, eep.l);
-      sc.a($$0, f, eep.L);
+   public static void a(qz<eei<?, ?>> $$0) {
+      sa.a($$0, a, eew.s);
+      sa.a($$0, b, eew.G, new egx(ejj.a(dis.iC), ecx.c(List.of(dis.j, dis.i, dis.l, dis.k, dis.fl, dis.dP, dis.dO)), brv.a(2, 3), 1));
+      sa.a($$0, c, eew.F, new egt(dis.cn.m()));
+      sa.a($$0, d, eew.E, new egt(dis.iC.m()));
+      sa.a($$0, e, eew.E, new egt(dis.mW.m()));
+      sa.a($$0, f, eew.D);
+      sa.a($$0, g, eew.H, new efl.a(ejb.a(dis.H.m()), ejb.a(dis.b.m())));
+      sa.a($$0, h, eew.G, new egx(ejj.a(dis.dR), ecx.c(List.of(dis.j, dis.dR)), brv.a(2, 3), 1));
+      sa.a($$0, i, eew.G, new egx(ejj.a(dis.L), ecx.c(List.of(dis.j, dis.i)), brv.a(2, 5), 2));
+      sa.a(
+         $$0, j, eew.G, new egx(new ejj(ejb.a(dis.I), List.of(new ejj.a(ecx.a(jm.a.q(), dis.a), ejb.a(dis.aV)))), ecx.c(List.of(dis.j, dis.i)), brv.a(2, 6), 2)
+      );
+      sa.a($$0, k, eew.u);
+      sa.a(
+         $$0,
+         l,
+         eew.G,
+         new egx(
+            new ejj(ejb.a(dis.j), List.of(new ejj.a(ecx.a(ecx.b(ecx.b(jm.b.q()), ecx.a(jm.b.q(), erw.c))), ejb.a(dis.i)))),
+            ecx.c(List.of(dis.j, dis.sI)),
+            brv.a(2, 6),
+            2
+         )
+      );
+      sa.a($$0, m, eew.ad);
+      sa.a($$0, n, eew.n);
+      sa.a($$0, o, eew.o);
+      sa.a($$0, p, eew.k, new ehv(erw.e.g(), true, 4, 1, ju.a(diq::p, dis.b, dis.c, dis.e, dis.g, dis.sJ, dis.qz, dis.qN, dis.j)));
+      sa.a($$0, q, eew.k, new ehv(erw.e.g(), true, 4, 1, ju.a(diq::p, dis.dP, dis.qP, dis.iC)));
+      sa.a($$0, r, eew.k, new ehv(erw.c.g(), true, 4, 1, ju.a(diq::p, dis.b, dis.c, dis.e, dis.g, dis.sJ, dis.qz, dis.qN, dis.j, dis.dP, dis.qP, dis.iC)));
    }
 }
